updated free spacing and fixed corrected parameter parentState mixin

--- a/mixins/parentState.scss
+++ b/mixins/parentState.scss
@@ -4,12 +4,12 @@
 /// @link https://www.sassmeister.com/gist/ba63c6546349047ad73b
 //
 
-@mixin parentState($states) {
-    $parent: nth(nth(&, 1), (length(nth(&, 1))-1));
+@mixin parentState($states...) {
+  $parent: nth(nth(&, 1), (length(nth(&, 1))-1));
 
-    @each $state in $states {
-      @at-root #{selector-replace(&, $parent, ($parent#{$state}))} {
-          @content;
-      }
+  @each $state in $states {
+    @at-root #{selector-replace(&, $parent, ($parent#{$state}))} {
+        @content;
     }
- }
+  }
+}
